# git-cl

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  git-cl  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md
.github/workflows/: test.yml
docs/: FUTURE.md  design-notes.md  git-cl-staging  paper.md  tutorial.md  why-git-cl.md
docs/demo/: generate_demo.py
tests/: README.md  run_tests.py  test_basic_add_status.py  test_branch.py  test_checkout.py  test_commit.py  test_diff.py  test_edge_cases.py  test_git_states.py  test_helpers.py  test_merge_conflict.py  test_remove_delete.py  test_stage_unstage.py  test_stash_unstash.py  test_subdirectory.py  test_validation.py
