[metadata]
name = git-changelists
version = 1.1.3
author = Bjoern Hendrik Fock
description = SVN-style changelists for Git
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
url = https://github.com/BHFock/git-cl
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Environment :: Console
    Topic :: Software Development :: Version Control :: Git

[options]
python_requires = >=3.9
scripts =
    git-cl

[pycodestyle]
max-line-length = 88
